--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+      <link rel="stylesheet" href="strang.css">
+
+
 <style>
   
   sources
@@ -93,7 +96,7 @@
 <div class="">
   
   <center>
-    <h3 class="text-primary">Choose your device</h3>
+    <h3 class="text-primary jk-mg-lg">Choose your device</h3>
   </center>
   <br><br>
   <a href="Desktop.html">
@@ -107,9 +110,9 @@
   
   
   
-  <b style="float: left; margin:10px;">Desktop</b>
+  <b style="float: left; margin:10px;" class="jk-blue-hover jk-mg-lg jk-container">Desktop</b>
   
-  <b style="float: right; margin:10px;">Mobile</b>
+  <b style="float: right; margin:10px;" class ="jk-blue-hover jk-container">Mobile</b>
   
 </div>
 
