--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h3 class="text-primary jk-mg-lg">Choose your device</h3>
   </center>
   <br><br>
-  <a href="Desktop.html">
+  <a href="https://janmoni05.github.io/cherry/">
   <img style="float:left;" src="https://img.icons8.com/emoji/96/000000/desktop-computer.png"/>
   </a>
   
